# Random-variables

./: README.md  pyproject.toml
randvar/: __init__.py  bernoulli.py  binomial.py  geometric.py  hypergeometric.py  poisson.py  random_variable.py
