[tool.poetry]
name = "randvar"
version = "0.2.1"
description = ""
authors = ["Matvey Merzlikin <merzlikinmatvey01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
